# juxtapositional-inpainting

./: .gitignore  README.md  jip_local.py  jip_modal_finetune.py  jip_modal_inpaint.py  modal_finetune.py  pyproject.toml
src/: config.py
src/core/: finetuning.py
src/datasets/: download_data.py
src/modal_remote/: finetuning.py  inpainting.py  setup.py
