[project]
name = "juxtapositional-inpainting"
version = "0.1.0"
description = "CLI tool for LoRA finetuning of image generation models and inpainting with finetuned models."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diffusers>=0.33.1",
    "huggingface>=0.0.1",
    "huggingface-hub>=0.33.0",
    "lxml>=5.4.0",
    "modal>=1.0.3",
    "torch>=2.7.1",
]
