[project]
name = "juxtapositional-inpainting"
version = "0.1.0"
description = "CLI tool for LoRA finetuning of image generation models and inpainting with finetuned models."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.8.1",
    "datasets>=3.6.0",
    "diffusers>=0.33.1",
    "ftfy>=6.3.1",
    "hf-transfer>=0.1.9",
    "huggingface>=0.0.1",
    "huggingface-hub[cli]>=0.33.0",
    "lxml>=5.4.0",
    "modal>=1.0.4",
    "numpy>=2.3.1",
    "peft>=0.15.2",
    "pydantic>=2.11.7",
    "sentencepiece>=0.1.91,!=0.1.92",
    "smart-open>=7.1.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
