[project]
name = "juxtapositional-inpainting"
version = "1.0.0"
description = "CLI tool for LoRA finetuning of image generation models and inpainting with finetuned models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "datasets>=3.6.0",
    "diffusers>=0.33.1",
    "ftfy>=6.3.1",
    "hf-transfer>=0.1.9",
    "huggingface>=0.0.1",
    "huggingface-hub[cli]>=0.33.0",
    "image>=1.5.33",
    "lxml>=5.4.0",
    "modal>=1.0.4",
    "numpy>=2.3.1",
    "peft>=0.15.2",
    "pillow>=11.2.1",
    "pydantic>=2.11.7",
    "ruff>=0.12.1",
    "sentencepiece>=0.1.91,!=0.1.92",
    "smart-open>=7.1.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]


[tool.ruff]
line-length = 88
target-version = "py39"
lint.select = ["E", "F", "W", "I", "UP", "PL", "TID"]
exclude = ["output", "data", ".venv", "venv", "__pycache__", "pyproject.toml"]
